// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSCard Custom Header 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_vertical"
  >
    <article
      aria-label="SLDSCard Component"
      className="slds-card"
      data-description="Description of the Card component"
      id="ExampleCard"
    >
      <div
        className="slds-card__header slds-grid"
      >
        <div
          className="slds-media slds-media_center slds-has-flexi-truncate"
        >
          <div
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-document"
            >
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_small"
              >
                <use
                  href="/assets/icons/standard-sprite/svg/symbols.svg#document"
                />
              </svg>
              
            </span>
             
          </div>
          <div
            className="slds-media__body"
          >
            <div
              className="slds-form-element slds-text-heading_small slds-truncate"
            >
              <div
                className="slds-form-element__control slds-has-divider_bottom"
              >
                <span
                  className="slds-form-element__static slds-grid slds-grid_align-spread"
                  onClick={[Function]}
                >
                  Write your own heading
                  <button
                    className="slds-button slds-button_icon slds-m-left_x-small"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    <span
                      className="slds-assistive-text"
                    >
                      Edit text
                    </span>
                    <svg
                      aria-hidden="true"
                      className="slds-button__icon slds-button__icon_small slds-button__icon_right"
                    >
                      <use
                        href="/assets/icons/utility-sprite/svg/symbols.svg#edit"
                      />
                    </svg>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="slds-input-has-icon slds-input-has-icon_left slds-size_1-of-3"
        >
          <div
            className="slds-form-element"
          >
            <label
              className="slds-form-element__label slds-assistive-text"
              htmlFor="ExampleCard__filter-input"
            >
              Find in List
            </label>
            <div
              className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
            >
              <svg
                aria-hidden={true}
                className="slds-input__icon slds-icon-text-default slds-input__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
              <input
                className="slds-input"
                id="ExampleCard__filter-input"
                onChange={[Function]}
                placeholder="Find in List"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="slds-no-flex slds-size_1-of-3 slds-text-align_right"
          id="ExampleCard__header-actions"
        >
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Delete All Items
          </button>
        </div>
      </div>
      <div
        className="slds-card__body"
        id="ExampleCard__body"
      >
        <table
          className="slds-table slds-table_bordered slds-table_cell-buffer"
          id="SLDSDataTableExample-1"
          onBlur={[Function]}
          role={null}
        >
          <thead
            className=""
          >
            <tr
              className="slds-line-height_reset"
            >
              <th
                aria-label="Opportunity Name"
                aria-sort="none"
                className=""
                id="SLDSDataTableExample-1-name-th"
                onFocus={[Function]}
                onKeyDown={[Function]}
                scope="col"
                style={null}
              >
                <div
                  className="slds-truncate"
                  title="Opportunity Name"
                >
                  Opportunity Name
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub"
                >
                  <span
                    title="Cloudhub"
                  >
                    Cloudhub
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub + Anypoint Connectors"
                >
                  <span
                    title="Cloudhub + Anypoint Connectors"
                  >
                    Cloudhub + Anypoint Connectors
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloud City"
                >
                  <span
                    title="Cloud City"
                  >
                    Cloud City
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="slds-card__footer"
      >
        Card Footer
      </div>
    </article>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCard Custom Heading 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_vertical"
  >
    <article
      aria-label="SLDSCard Component"
      className="slds-card"
      data-description="Description of the Card component"
      id="ExampleCard"
    >
      <div
        className="slds-card__header slds-grid"
      >
        <div
          className="slds-media slds-media_center slds-has-flexi-truncate"
        >
          <div
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-document"
            >
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_small"
              >
                <use
                  href="/assets/icons/standard-sprite/svg/symbols.svg#document"
                />
              </svg>
              
            </span>
             
          </div>
          <div
            className="slds-media__body"
          >
            <h2
              className="slds-text-heading_small slds-truncate"
              id="ExampleCard__heading"
              title={null}
            >
              <span
                style={
                  Object {
                    "color": "red",
                  }
                }
              >
                To Wanda! This is custom!
              </span>
            </h2>
          </div>
        </div>
        <div
          className="slds-input-has-icon slds-input-has-icon_left slds-size_1-of-3"
        >
          <div
            className="slds-form-element"
          >
            <label
              className="slds-form-element__label slds-assistive-text"
              htmlFor="ExampleCard__filter-input"
            >
              Find in List
            </label>
            <div
              className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
            >
              <svg
                aria-hidden={true}
                className="slds-input__icon slds-icon-text-default slds-input__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
              <input
                className="slds-input"
                id="ExampleCard__filter-input"
                onChange={[Function]}
                placeholder="Find in List"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="slds-no-flex slds-size_1-of-3 slds-text-align_right"
          id="ExampleCard__header-actions"
        >
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Delete All Items
          </button>
        </div>
      </div>
      <div
        className="slds-card__body"
        id="ExampleCard__body"
      >
        <table
          className="slds-table slds-table_bordered slds-table_cell-buffer"
          id="SLDSDataTableExample-1"
          onBlur={[Function]}
          role={null}
        >
          <thead
            className=""
          >
            <tr
              className="slds-line-height_reset"
            >
              <th
                aria-label="Opportunity Name"
                aria-sort="none"
                className=""
                id="SLDSDataTableExample-1-name-th"
                onFocus={[Function]}
                onKeyDown={[Function]}
                scope="col"
                style={null}
              >
                <div
                  className="slds-truncate"
                  title="Opportunity Name"
                >
                  Opportunity Name
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub"
                >
                  <span
                    title="Cloudhub"
                  >
                    Cloudhub
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub + Anypoint Connectors"
                >
                  <span
                    title="Cloudhub + Anypoint Connectors"
                  >
                    Cloudhub + Anypoint Connectors
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloud City"
                >
                  <span
                    title="Cloud City"
                  >
                    Cloud City
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="slds-card__footer"
      >
        Card Footer
      </div>
    </article>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCard Doc site Related List With Table 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_vertical"
  >
    <article
      className="slds-card"
      id="ExampleCard"
    >
      <div
        className="slds-card__header slds-grid"
      >
        <div
          className="slds-media slds-media_center slds-has-flexi-truncate"
        >
          <div
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-document"
            >
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_small"
              >
                <use
                  href="/assets/icons/standard-sprite/svg/symbols.svg#document"
                />
              </svg>
              
            </span>
             
          </div>
          <div
            className="slds-media__body"
          >
            <h2
              className="slds-text-heading_small slds-truncate"
              id="ExampleCard__heading"
              title="Releated Items"
            >
              Releated Items
            </h2>
          </div>
        </div>
        <div
          className="slds-input-has-icon slds-input-has-icon_left slds-size_1-of-3"
        >
          <div
            className="slds-form-element"
          >
            <label
              className="slds-form-element__label slds-assistive-text"
              htmlFor="ExampleCard__filter-input"
            >
              Find in List
            </label>
            <div
              className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
            >
              <svg
                aria-hidden={true}
                className="slds-input__icon slds-icon-text-default slds-input__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
              <input
                className="slds-input"
                id="ExampleCard__filter-input"
                onChange={[Function]}
                placeholder="Find in List"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="slds-no-flex slds-size_1-of-3 slds-text-align_right"
          id="ExampleCard__header-actions"
        >
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Delete All Items
          </button>
        </div>
      </div>
      <div
        className="slds-card__body"
        id="ExampleCard__body"
      >
        <table
          className="slds-table slds-table_bordered slds-table_cell-buffer"
          id="DataTableExample-1"
          onBlur={[Function]}
          role={null}
        >
          <thead
            className=""
          >
            <tr
              className="slds-line-height_reset"
            >
              <th
                aria-label="Opportunity Name"
                aria-sort="none"
                className=""
                id="DataTableExample-1-name-th"
                onFocus={[Function]}
                onKeyDown={[Function]}
                scope="col"
                style={null}
              >
                <div
                  className="slds-truncate"
                  title="Opportunity Name"
                >
                  Opportunity Name
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub"
                >
                  Cloudhub
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub + Anypoint Connectors"
                >
                  Cloudhub + Anypoint Connectors
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloud City"
                >
                  Cloud City
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </article>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCard Empty 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_vertical"
  >
    <article
      aria-label="SLDSCard Component"
      className="slds-card"
      data-description="Description of the Card component"
      id="ExampleCard"
    >
      <div
        className="slds-card__header slds-grid"
      >
        <div
          className="slds-media slds-media_center slds-has-flexi-truncate"
        >
          <div
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-document"
            >
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_small"
              >
                <use
                  href="/assets/icons/standard-sprite/svg/symbols.svg#document"
                />
              </svg>
              
            </span>
             
          </div>
          <div
            className="slds-media__body"
          >
            <h2
              className="slds-text-heading_small slds-truncate"
              id="ExampleCard__heading"
              title="Related Items"
            >
              Related Items
            </h2>
          </div>
        </div>
        <div
          className="slds-no-flex"
          id="ExampleCard__header-actions"
        >
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            New
          </button>
        </div>
      </div>
      <div
        className="slds-card__body"
        id="ExampleCard__body"
      >
        <div
          className="slds-p-horizontal_small"
        >
          <div
            className="slds-text-align_center slds-m-bottom_x-large"
          >
            <h3
              className="slds-text-heading_small slds-p-top_large slds-p-bottom_large"
            >
              No Related Items
            </h3>
          </div>
        </div>
      </div>
      <div
        className="slds-card__footer"
      >
        Card Footer
      </div>
    </article>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCard Set height card 1`] = `
<div
  className="slds-p-around_medium"
>
  <article
    className="slds-card slds-grid slds-grid_vertical"
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="slds-card__header slds-grid"
    >
      <div
        className="slds-media slds-media_center slds-has-flexi-truncate"
      >
        <div
          className="slds-media__figure"
        >
          <span
            className="slds-icon_container slds-icon-standard-document"
          >
            <svg
              aria-hidden="true"
              className="slds-icon slds-icon_small"
            >
              <use
                href="/assets/icons/standard-sprite/svg/symbols.svg#document"
              />
            </svg>
            
          </span>
           
        </div>
        <div
          className="slds-media__body"
        >
          <h2
            className="slds-text-heading_small slds-truncate"
            id={null}
            title="Card with set height"
          >
            Card with set height
          </h2>
        </div>
      </div>
      <div
        className="slds-no-flex"
        id={null}
      />
    </div>
    <div
      className="slds-card__body slds-grow slds-scrollable_y"
      id={null}
    >
      <div
        className="slds-card__body_inner"
      >
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
        <div>
          asdf
        </div>
      </div>
    </div>
    <div
      className="slds-card__footer"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        Footer text
      </a>
    </div>
  </article>
</div>
`;

exports[`DOM snapshots SLDSCard w/ Items 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-grid slds-grid_vertical"
  >
    <article
      aria-label="SLDSCard Component"
      className="slds-card"
      data-description="Description of the Card component"
      id="ExampleCard"
    >
      <div
        className="slds-card__header slds-grid"
      >
        <div
          className="slds-media slds-media_center slds-has-flexi-truncate"
        >
          <div
            className="slds-media__figure"
          >
            <span
              className="slds-icon_container slds-icon-standard-document"
            >
              <svg
                aria-hidden="true"
                className="slds-icon slds-icon_small"
              >
                <use
                  href="/assets/icons/standard-sprite/svg/symbols.svg#document"
                />
              </svg>
              
            </span>
             
          </div>
          <div
            className="slds-media__body"
          >
            <h2
              className="slds-text-heading_small slds-truncate"
              id="ExampleCard__heading"
              title="Related Items (3)"
            >
              Related Items (3)
            </h2>
          </div>
        </div>
        <div
          className="slds-input-has-icon slds-input-has-icon_left slds-size_1-of-3"
        >
          <div
            className="slds-form-element"
          >
            <label
              className="slds-form-element__label slds-assistive-text"
              htmlFor="ExampleCard__filter-input"
            >
              Find in List
            </label>
            <div
              className="slds-form-element__control slds-input-has-icon slds-input-has-icon_left"
            >
              <svg
                aria-hidden={true}
                className="slds-input__icon slds-icon-text-default slds-input__icon_left"
              >
                <use
                  href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                />
              </svg>
              <input
                className="slds-input"
                id="ExampleCard__filter-input"
                onChange={[Function]}
                placeholder="Find in List"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="slds-no-flex slds-size_1-of-3 slds-text-align_right"
          id="ExampleCard__header-actions"
        >
          <button
            className="slds-button slds-button_neutral"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Delete All Items
          </button>
        </div>
      </div>
      <div
        className="slds-card__body"
        id="ExampleCard__body"
      >
        <table
          className="slds-table slds-table_bordered slds-table_cell-buffer"
          id="SLDSDataTableExample-1"
          onBlur={[Function]}
          role={null}
        >
          <thead
            className=""
          >
            <tr
              className="slds-line-height_reset"
            >
              <th
                aria-label="Opportunity Name"
                aria-sort="none"
                className=""
                id="SLDSDataTableExample-1-name-th"
                onFocus={[Function]}
                onKeyDown={[Function]}
                scope="col"
                style={null}
              >
                <div
                  className="slds-truncate"
                  title="Opportunity Name"
                >
                  Opportunity Name
                </div>
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub"
                >
                  <span
                    title="Cloudhub"
                  >
                    Cloudhub
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloudhub + Anypoint Connectors"
                >
                  <span
                    title="Cloudhub + Anypoint Connectors"
                  >
                    Cloudhub + Anypoint Connectors
                  </span>
                </div>
              </td>
            </tr>
            <tr
              className=""
            >
              <td
                className="slds-truncate"
                data-label="Opportunity Name"
                onFocus={[Function]}
                onKeyDown={[Function]}
                role={null}
                style={null}
              >
                <div
                  className=""
                  title="Cloud City"
                >
                  <span
                    title="Cloud City"
                  >
                    Cloud City
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="slds-card__footer"
      >
        Card Footer
      </div>
    </article>
  </div>
</div>
`;

exports[`DOM snapshots SLDSCard w/o Header 1`] = `
<div
  className="slds-p-around_medium"
>
  <article
    className="slds-card slds-grid slds-grid_vertical"
    style={
      Object {
        "height": "300px",
      }
    }
  >
    <div
      className="slds-card__body slds-grow slds-scrollable_y"
      id={null}
    >
      <table
        className="slds-table slds-table_bordered slds-table_cell-buffer"
        id="SLDSDataTableExample-1"
        onBlur={[Function]}
        role={null}
      >
        <thead
          className=""
        >
          <tr
            className="slds-line-height_reset"
          >
            <th
              aria-label="Opportunity Name"
              aria-sort="none"
              className=""
              id="SLDSDataTableExample-1-name-th"
              onFocus={[Function]}
              onKeyDown={[Function]}
              scope="col"
              style={null}
            >
              <div
                className="slds-truncate"
                title="Opportunity Name"
              >
                Opportunity Name
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className=""
          >
            <td
              className="slds-truncate"
              data-label="Opportunity Name"
              onFocus={[Function]}
              onKeyDown={[Function]}
              role={null}
              style={null}
            >
              <div
                className=""
                title="Cloudhub"
              >
                <span
                  title="Cloudhub"
                >
                  Cloudhub
                </span>
              </div>
            </td>
          </tr>
          <tr
            className=""
          >
            <td
              className="slds-truncate"
              data-label="Opportunity Name"
              onFocus={[Function]}
              onKeyDown={[Function]}
              role={null}
              style={null}
            >
              <div
                className=""
                title="Cloudhub + Anypoint Connectors"
              >
                <span
                  title="Cloudhub + Anypoint Connectors"
                >
                  Cloudhub + Anypoint Connectors
                </span>
              </div>
            </td>
          </tr>
          <tr
            className=""
          >
            <td
              className="slds-truncate"
              data-label="Opportunity Name"
              onFocus={[Function]}
              onKeyDown={[Function]}
              role={null}
              style={null}
            >
              <div
                className=""
                title="Cloud City"
              >
                <span
                  title="Cloud City"
                >
                  Cloud City
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="slds-card__footer"
    >
      <a
        href="#"
        onClick={[Function]}
      >
        Footer text
      </a>
    </div>
  </article>
</div>
`;
